--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,16 +16,17 @@
     "axios": "^1.6.8",
     "expo": "~50.0.13",
     "expo-camera": "~14.1.1",
+    "expo-constants": "~15.4.5",
+    "expo-file-system": "~16.0.8",
     "expo-image-picker": "^14.7.1",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
-    "expo-constants": "~15.4.5",
-    "expo-file-system": "~16.0.8"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
