--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.5",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
