--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
-    "expo": "~50.0.13",
+    "expo": "^50.0.14",
     "expo-camera": "~14.1.1",
     "expo-constants": "~15.4.5",
     "expo-file-system": "~16.0.8",
